--- a/youtube.html
+++ b/youtube.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="styles/general.css">
     <link rel="stylesheet" href="styles/video.css">
     <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/sidebar.css">
 
   </head>
   <body>
@@ -30,10 +31,19 @@
       <div class="right-section">
         <img class="upload-icon" src="icons/upload.svg">
         <img class="youtube-apps-icon" src="icons/youtube-apps.svg">
+        <div class="notifications-icon-container">
         <img class="notifications-icon" src="icons/notifications.svg">
+        <div class="notifications-count">
+          3
+        </div>
+        </div>
         <img class="current-user-picture" src="channel-pictures/my-channel.jpeg">
       </div>
       
+    </div>
+
+    <div class="sidebar">
+      sidebar
     </div>
     
 
@@ -41,6 +51,9 @@
       <div class="video-preview">
       <div class="thumbnail-row">
         <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
+        <div class="video-time">
+          14:20
+        </div>
       </div>
       <div class="video-info-grid">
         <div class="channel-picture">
@@ -65,6 +78,9 @@
     <div class="video-preview">
       <div class="thumbnail-row">
         <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
+        <div class="video-time">
+          8:22
+        </div>
       </div>
       <div class="video-info-grid">
         <div class="channel-picture">
@@ -89,6 +105,9 @@
     <div class="video-preview">
       <div class="thumbnail-row">
         <img class="thumbnail" src="thumbnails/thumbnail-3.webp">
+        <div class="video-time">
+          9:13
+        </div>
       </div>
       <div class="video-info-grid">
         <div class="channel-picture">
@@ -113,6 +132,9 @@
     <div class="video-preview">
       <div class="thumbnail-row">
         <img class="thumbnail" src="thumbnails/thumbnail-4.webp">
+        <div class="video-time">
+          22:09
+        </div>
       </div>
       <div class="video-info-grid">
         <div class="channel-picture">
@@ -138,6 +160,9 @@
     <div class="video-preview">
       <div class="thumbnail-row">
         <img class="thumbnail" src="thumbnails/thumbnail-5.webp">
+        <div class="video-time">
+          11:17
+        </div>
       </div>
       <div class="video-info-grid">
         <div class="channel-picture">
@@ -160,6 +185,9 @@
     <div class="video-preview">
       <div class="thumbnail-row">
         <img class="thumbnail" src="thumbnails/thumbnail-6.webp">
+        <div class="video-time">
+          19:59
+        </div>
       </div>
       <div class="video-info-grid">
         <div class="channel-picture">
